--- a/udema/src/main/resources/application.properties
+++ b/udema/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=UDEMA
 spring.datasource.url=jdbc:postgresql://localhost:5432/udema
-spring.datasource.username=udema_test_user
-spring.datasource.password=severus_test_123
+spring.datasource.username=udema_user
+spring.datasource.password=severus_123
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+
+server.error.include-message=always
