--- a/udema/src/main/resources/application.properties
+++ b/udema/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=UDEMA
 spring.datasource.url=jdbc:postgresql://localhost:5432/udema
 spring.datasource.username=udema_user
 spring.datasource.password=severus_123
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
